--- a/index.html
+++ b/index.html
@@ -74,10 +74,7 @@
                 fringilla
                 scelerisque, sem purus fringilla mauris, nec ultricies nisl nisl sit amet dolor. Donec et venenatis
                 nunc, vel
-                hendrerit ex. Vestibulum sapien ipsum, rutrum eget est et, ultricies sagittis urna. In non volutpat est.
-                Vestibulum diam sapien, ultrices et euismod at, ultrices ut odio. Nullam in massa et elit ultrices
-                suscipit.
-                Proin lacinia leo ac posuere placerat.</p>
+                hendrerit ex. </p>
         </div>
     </section>
 
