--- a/index.html
+++ b/index.html
@@ -221,12 +221,8 @@
                 <!-- Item 1 -->
                 <div class="carousel-item active">
                     <div class="container">
-                        <img class="testim-img rounded-circle" src="img/testim-img/pfp-testim1.jpg" alt="Foto de Gino">
-                        <p class="testim-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum
-                            dolor sit amet,
-                            consectetur adipiscing elit. Suspendisse ac maximus arcu. Etiam pretium euismod nisl finibus
-                            molestie.
-                        </p>
+                        <img class="testim-img rounded-circle" src="img/testim-img/pfp-testim1.jpg" alt="Foto de...">
+                        <p class="testim-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         <div class="testim-info">
                             <p class="client-name">Mr. Lorem Ipsum</p>
                             <p class="client-prof">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
@@ -236,12 +232,8 @@
                 <!-- Item 2 -->
                 <div class="carousel-item">
                     <div class="container">
-                        <img class="testim-img rounded-circle" src="img/testim-img/pfp-testim2.jpg" alt="Foto de Nora">
-                        <p class="testim-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum
-                            dolor sit amet,
-                            consectetur adipiscing elit. Suspendisse ac maximus arcu. Etiam pretium euismod nisl finibus
-                            molestie.
-                        </p>
+                        <img class="testim-img rounded-circle" src="img/testim-img/pfp-testim2.jpg" alt="Foto de...">
+                        <p class="testim-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         <div class="testim-info">
                             <p class="client-name">Mr. Lorem Ipsum</p>
                             <p class="client-prof">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
@@ -252,12 +244,8 @@
                 <div class="carousel-item">
                     <div class="container">
                         <img class="testim-img rounded-circle" src="img/testim-img/pfp-testim3.jpg"
-                            alt="Foto de Leonardo">
-                        <p class="testim-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum
-                            dolor sit amet,
-                            consectetur adipiscing elit. Suspendisse ac maximus arcu. Etiam pretium euismod nisl finibus
-                            molestie.
-                        </p>
+                            alt="Foto de...">
+                        <p class="testim-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         <div class="testim-info">
                             <p class="client-name">Mr. Lorem Ipsum</p>
                             <p class="client-prof">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
