--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                         <p class="testim-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         <div class="testim-info">
                             <p class="client-name">Mr. Lorem Ipsum</p>
-                            <p class="client-prof">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                            <p class="client-prof">Lorem ipsum dolor</p>
                         </div>
                     </div>
                 </div>
@@ -236,7 +236,7 @@
                         <p class="testim-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         <div class="testim-info">
                             <p class="client-name">Mr. Lorem Ipsum</p>
-                            <p class="client-prof">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                            <p class="client-prof">Lorem ipsum dolor</p>
                         </div>
                     </div>
                 </div>
@@ -248,7 +248,7 @@
                         <p class="testim-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         <div class="testim-info">
                             <p class="client-name">Mr. Lorem Ipsum</p>
-                            <p class="client-prof">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                            <p class="client-prof">Lorem ipsum dolor</p>
                         </div>
                     </div>
                 </div>
