--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
         <div class="container p-5">
             <div class="row">
                 <!-- Image -->
-                <div class="col-12 col-md-5 img-area d-flex flex-column justify-content-center">
-                    <div class="img-box">
+                <div class="col-12 col-md-4 img-area d-flex flex-column justify-content-center">
+                    <div class="img-box p-5">
                         <img src="assets/img/pfp.jpg" class="img-fluid rounded-circle" alt="">
                     </div>
                 </div>
                 <!-- Text -->
-                <div class="col-12 col-md-7 txt-area d-flex flex-column justify-content-center">
+                <div class="col-12 col-md-8 txt-area d-flex flex-column justify-content-center">
                     <!-- Text Box -->
                     <div class="txt-box">
                         <h1 class="txt-title mt-4">Diego Flores</h1>
