--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="row">
                 <!-- Image -->
                 <div class="col-12 col-md-4 img-area d-flex flex-column justify-content-center">
-                    <div class="img-box p-5">
+                    <div class="img-box p-lg-2">
                         <img src="assets/img/pfp.jpg" class="img-fluid rounded-circle" alt="">
                     </div>
                 </div>
