Change the containers

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <!-- Main -->
     <section id="home" class="container-fluid">
-        <div class="container p-5">
+        <div class=" p-5">
             <div class="row">
                 <!-- Image -->
                 <div class="col-12 col-md-4 img-area d-flex flex-column justify-content-center">
@@ -78,7 +78,7 @@
 
     <!-- About Me -->
     <section id="aboutme" class="container-fluid">
-        <div class="container p-5 pb-0">
+        <div class=" p-5 pb-0">
             <div class="info-box">
                 <h1 class="txt-title">More about me </h1>
                 <p class="txt-desc">
@@ -156,16 +156,16 @@
 
     <!-- Contact -->
     <section id="contact" class="container-fluid">
-        <div class="container p-5">
+        <div class="p-5">
             <div class="row flex-column-reverse flex-md-row">
                 <!-- Image -->
-                <div class="col-12 col-md-5 img-area d-flex flex-column justify-content-center">
+                <div class="col-12 col-md-3 img-area d-flex flex-column justify-content-center">
                     <div>
                         <img src="assets/img/contact.png" class="img-fluid contact-img" alt="Contact Image">
                     </div>
                 </div>
                 <!-- Text -->
-                <div class="col-12 col-md-7 txt-area d-flex flex-column justify-content-center">
+                <div class="col-12 col-md-9 txt-area d-flex flex-column justify-content-center">
                     <!-- Text Box -->
                     <div class="txt-box mt-md-5 mt-0">
                         <h1 class="txt-title">Contact Us</h1>
